--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "scroll-to-element": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
